design fixed spacing issues

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -118,7 +118,7 @@
 }
 @media (min-width: 1400px) {
   .header-content {
-    padding-top: 198px;
+    padding-top: 124px;
   }
   .header-content button {
     margin-bottom: 15.5rem;
